CSS/Home.css
body{
  margin: 0;
  padding: 0;
}



#container1-annbar{
  display: flex;
  flex-direction:row ;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  border: solid;
  border-color: rgba(0, 0, 0, 0.066);
  border-left: 0px;
  border-right: 0px;
  height: 8vh;
  text-align: center;
  align-items: center;
  justify-content: center;
  padding: 10px 25px;
}

  p{
    margin: 0;
    font-size: 24px;
  }

a, a:hover{
  text-decoration: none;
}



  a {
    text-decoration: none;
    font-size: 18px;
  }

  .black-a{
    color: white;
  }

  .white-a{
    color:white;
  }

  li{

    list-style-type: none;

  }


  .center-ptext{
    text-align: center;
    padding-left: 50px;
    padding-right: 50px;
    /*background-color: rgb(71, 71, 71);*/
    color: white;
    margin-left: 50px;
    margin-right: 50px;
  }



  *{
    box-sizing: border-box;
  }
  
  body{
    margin: 0;
    padding: 0;
  }
  
  .navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(17, 17, 17);
    color: black;
  }
  
  .brand-title{
  font-size: 1.5rem;
  margin: 0;
  padding: 16px;
  color: white;
  }

  .brand-title:hover{
    background-color: #555;
  }
  .navbar-links ul{
    margin: 0;
    padding: 0;
    display: flex;
  }
  
  .navbar-links li{
    list-style: none;
  }
  
  .navbar-links li a{
  text-decoration: none;
  color: white;
  padding: 1rem;
  display: block;
  }
  
  .navbar-links li:hover{
    background-color: #555;
  }
  
  .toggle-button{
    position: absolute;
    top: .75rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
  }
  
  .toggle-button .bar{
    height: 3px;
    width: 100%;
    background-color: white;
    border-radius: 10px;
  }
  
  @media(max-width: 600px) {
    .toggle-button{
      display: flex;
    }
    .navbar-links{
      display: none;
      width: 100%;
    }
    .navbar{
      flex-direction: column;
      align-items: flex-start;
    }
    .navbar-links ul{
      width: 100%;
      flex-direction: column;
    }
    .navbar-links li{
      text-align: center;
    }
    .navbar-links li a{
      padding: .5rem 1rem;
    }
    .navbar-links.active{
      display: flex;
    }
  }
  




  .Container-column{
    display: flex;
    flex-direction:column ;
    justify-content: center;
    align-items: center;
    padding-bottom: 10px;
    /*margin: 50px;*/
    padding: 0px 50px;
    background-color: black;
  }

  .Container-column2{
    display: flex;
    flex-direction:column ;
    justify-content: center;
    align-items: center;
    /*padding: 10px;*/
  }

  #Cont-rw-clmn{
    display: flex;
    flex-direction:row ;
    justify-content: center;
    align-items: center;
  }

  #copyright{
    display: flex;
    flex-direction: row;
    justify-content: right;
    font-size: 1.1rem;
  }

  footer{
    background-color: rgb(7, 7, 7); 
    color: white;
  }

  .footer2{
    background-color: rgb(5, 5, 5);
    color: white;
  }

  .footer-link{
    font-size: 1.2rem;
  }

  h1,h2,h4{
    color: white;
  }

  h4{
    margin: 0; 
  }

  .row{
    display: flex;
    flex-wrap: wrap;
  }

  .footer-col{
    width: 25%;
    padding: 0 15px;
  }

  .line-break{
    width: 100%;
    height: 2.5px;
    background-color: rgb(0, 23, 230); /* Replace 'red' with the desired color */
    margin: 10px 0; /* Adjust the margin as needed */
  }

  .line-break1{
    width: 50%;
    height: 2.5px;
    background-color: white; /* Replace 'red' with the desired color */
    margin: 10px 0; /* Adjust the margin as needed */
  }

